[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "faportalsmp"
version = "2.2.0"
description = "An Asynchronous Python Library for interacting with the Portals Gift Marketplace API (TON deposits & withdrawals, gifts trading, offers, giveaways)"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "kurigram==2.2.6",
    "pydantic>=2.0.0",
    "curl_cffi>=0.5.0",
    "tgcrypto>=1.2.0",
    "pytoniq>=0.1.40",
]

[project.urls]
Homepage = "https://github.com/thebrainair/faportalsmp"
Documentation = "https://github.com/thebrainair/faportalsmp#readme"
Repository = "https://github.com/thebrainair/faportalsmp"
Issues = "https://github.com/thebrainair/faportalsmp/issues"

[tool.hatch.build.targets.wheel]
packages = ["aportalsmp"]

[tool.hatch.build.targets.sdist]
exclude = [
    "venv",
    ".git",
]